HIS/force-app/main/default/objects/Room_Service__c/Room_Service__c.object-meta.xml
<CustomObject>
    <label>Room Service</label>
    <nameField>
        <displayFormat>Order No: {0000}</displayFormat>
        <label>Order No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Room Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>