HIS/force-app/main/default/objects/Room_Service__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Room Services</relationshipLabel>
    <relationshipName>Room_Services</relationshipName>
    <type>Lookup</type>
</CustomField>