HIS/force-app/main/default/objects/Room_Service__c/fields/Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Item__c</fullName>
    <label>Order Item</label>
    <type>TextArea</type>
</CustomField>