HIS/force-app/main/default/objects/Room_Service__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Pending</fullName>
                <default>true</default>
                <label>Order Pending</label>
            </value>
            <value>
                <fullName>Order In-Progress</fullName>
            </value>
            <value>
                <fullName>Order Ready</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>